v8/tests/messages/return-top.out
return-top.js:1: Uncaught SyntaxError: Illegal return statement
return
^
